# terma

./: README.md  pyproject.toml
src/: __init__.py  cli.py  terma.py
src/commands/: config.py  terma.py
src/util/: ansi.py  exceptions.py  helpers.py  io.py
